✨ Redesign Vision section - clean and elegant layout

--- a/index.html
+++ b/index.html
@@ -925,70 +925,59 @@
         </div>
     </section>
 
-    <!-- SHIFT AUTOMATION -->
-    <section class="section">
+    <!-- VISION: SHIFT AUTOMATION -->
+    <section class="section" style="text-align: center;">
         <p class="section-label">Vision</p>
         <h2>人員最適化のデザイン</h2>
-        <p class="section-desc">適正フォーキャスト × スキル評価で、「勘」に頼らないシフト設計を実現する。</p>
+        <p class="section-desc" style="margin: 0 auto;">「勘」に頼らない、データドリブンなシフト設計を実現する。</p>
 
-        <div class="scenario-card"
-            style="background: linear-gradient(135deg, #f8f4eb 0%, #fff 100%); border-color: var(--gold);">
-            <span class="scenario-tag">Ultimate Goal</span>
-            <p class="scenario-title">シフト自動化アプローチ</p>
-
-            <div
-                style="display: grid; grid-template-columns: 1fr auto 1fr auto 1fr; gap: 20px; align-items: center; margin-bottom: 30px;">
-                <div class="calc-item" style="background: var(--surface);">
-                    <small>Demand</small>
-                    <strong style="font-size: 16px;">Momentum<br>Peaks</strong>
+        <!-- Formula: Simple Flow -->
+        <div style="margin: 50px 0; display: flex; flex-direction: column; align-items: center; gap: 16px;">
+            <div style="display: flex; align-items: center; gap: 16px; flex-wrap: wrap; justify-content: center;">
+                <div
+                    style="background: var(--surface); border: 1px solid var(--border); border-radius: 12px; padding: 20px 28px; text-align: center;">
+                    <div
+                        style="font-size: 10px; font-weight: 500; letter-spacing: 1px; color: var(--gold); margin-bottom: 6px;">
+                        DEMAND</div>
+                    <div style="font-size: 16px; font-weight: 500; color: var(--navy);">Momentum Peaks</div>
                 </div>
-                <span class="calc-op" style="font-size: 24px;">×</span>
-                <div class="calc-item" style="background: var(--surface);">
-                    <small>Supply</small>
-                    <strong style="font-size: 16px;">Talent<br>Intelligence</strong>
-                </div>
-                <span class="calc-op" style="font-size: 24px;">=</span>
-                <div class="calc-item" style="background: var(--gold); border-color: var(--gold);">
-                    <small style="color: rgba(255,255,255,0.7);">Output</small>
-                    <strong style="font-size: 16px; color: #fff;">最適<br>シフト</strong>
+                <div style="font-size: 24px; color: var(--gold);">×</div>
+                <div
+                    style="background: var(--surface); border: 1px solid var(--border); border-radius: 12px; padding: 20px 28px; text-align: center;">
+                    <div
+                        style="font-size: 10px; font-weight: 500; letter-spacing: 1px; color: var(--gold); margin-bottom: 6px;">
+                        SUPPLY</div>
+                    <div style="font-size: 16px; font-weight: 500; color: var(--navy);">Talent Intelligence</div>
                 </div>
             </div>
-
-            <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 16px;">
-                <div style="background: var(--bg); border-radius: 12px; padding: 20px;">
-                    <div style="font-size: 12px; font-weight: 500; color: var(--gold); margin-bottom: 8px;">Momentum
-                        Peaks（需要側）</div>
-                    <p style="font-size: 13px; font-weight: 300; color: var(--text-secondary);">
-                        拠点別に適切な環境要因を分析し、365日の売上・入客データから「その日の営業インテンシティ（営業の強度）」を定量化</p>
-                </div>
-                <div style="background: var(--bg); border-radius: 12px; padding: 20px;">
-                    <div style="font-size: 12px; font-weight: 500; color: var(--gold); margin-bottom: 8px;">Talent
-                        Intelligence（供給側）</div>
-                    <p style="font-size: 13px; font-weight: 300; color: var(--text-secondary);">
-                        経験・役割・スキル・成長過程を定量化し、主観・客観・評価をダッシュボード化。人材配置を戦略的にデザイン。</p>
-                </div>
+            <div style="font-size: 24px; color: var(--gold);">↓</div>
+            <div style="background: var(--gold); border-radius: 12px; padding: 20px 36px; text-align: center;">
+                <div
+                    style="font-size: 10px; font-weight: 500; letter-spacing: 1px; color: rgba(255,255,255,0.8); margin-bottom: 6px;">
+                    OUTPUT</div>
+                <div style="font-size: 18px; font-weight: 600; color: #fff;">最適シフト</div>
             </div>
         </div>
 
-        <div style="text-align: center; margin-top: 40px;">
+        <!-- Description -->
+        <p
+            style="font-size: 14px; color: var(--text-secondary); max-width: 500px; margin: 0 auto 50px; line-height: 1.8;">
+            需要と供給を数値でマッチング。<br>
+            <strong style="color: var(--navy);">適切なスキル × 適切な日 × 適切な人数</strong><br>
+            のシフト設計を実現する。
+        </p>
+
+        <!-- Ultimate Goal -->
+        <div
+            style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 20px; padding: 40px; max-width: 500px; margin: 0 auto;">
             <p
-                style="font-size: 14px; font-weight: 300; color: var(--text-secondary); max-width: 600px; margin: 0 auto;">
-                需要と供給を数値でマッチングすることで、<br>
-                <strong style="color: var(--navy);">「適切なスキルを持つスタッフが、適切な日に、適切な人数で配置される」</strong><br>
-                シフト設計を実現する。
+                style="font-size: 11px; font-weight: 600; letter-spacing: 2px; color: rgba(255,255,255,0.8); margin: 0 0 16px 0;">
+                🎯 ULTIMATE GOAL</p>
+            <p style="font-size: 20px; font-weight: 500; color: #fff; margin: 0; line-height: 1.6;">
+                ボタンひとつで<br>
+                最適シフトが提案される
             </p>
-            <div
-                style="margin-top: 30px; padding: 28px 40px; background: var(--gold); border-radius: 16px; display: inline-block;">
-                <p
-                    style="font-size: 12px; font-weight: 600; letter-spacing: 2px; color: rgba(255,255,255,0.8); margin: 0 0 12px 0;">
-                    🎯 ULTIMATE GOAL
-                </p>
-                <p style="font-size: 16px; font-weight: 400; color: #fff; margin: 0; line-height: 1.8;">
-                    ボタンひとつで最適シフトが提案される<br>
-                    拠点と店舗に合致した<strong style="font-size: 18px;">シフト作成ツールの完成</strong>による<br>
-                    <strong style="font-size: 24px; letter-spacing: 1px;">業務革命</strong>
-                </p>
-            </div>
+            <p style="font-size: 28px; font-weight: 600; color: #fff; margin: 20px 0 0 0; letter-spacing: 1px;">業務革命</p>
         </div>
     </section>
 
