--- a/index.html
+++ b/index.html
@@ -564,6 +564,9 @@
     <section class="hero">
         <p class="hero-eyebrow">SVD-OS Intelligence</p>
         <h1>Momentum Peaks</h1>
+        <p
+            style="font-size: 14px; font-weight: 400; color: var(--text-secondary); letter-spacing: 2px; margin: -10px 0 20px 0;">
+            モメンタムピークス</p>
         <p class="hero-sub">業界の「なんとなく」を排除し、<br>データで<strong>適正フォーキャスト</strong>を構築する。<br><span
                 style="font-size:14px; color:var(--gold);">Scale: 0.01 〜 5.00</span></p>
 
@@ -989,16 +992,19 @@
         </div>
 
         <!-- Ultimate Goal -->
-        <div
-            style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 20px; padding: 40px; max-width: 500px; margin: 0 auto;">
-            <p
-                style="font-size: 11px; font-weight: 600; letter-spacing: 2px; color: rgba(255,255,255,0.8); margin: 0 0 16px 0;">
-                🎯 ULTIMATE GOAL</p>
-            <p style="font-size: 20px; font-weight: 500; color: #fff; margin: 0; line-height: 1.6;">
-                ボタンひとつで<br>
-                最適シフトが提案される
-            </p>
-            <p style="font-size: 28px; font-weight: 600; color: #fff; margin: 20px 0 0 0; letter-spacing: 1px;">業務革命</p>
+        <div style="text-align: center; margin-top: 50px;">
+            <div
+                style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 20px; padding: 40px; max-width: 500px; margin: 0 auto; display: inline-block;">
+                <p
+                    style="font-size: 11px; font-weight: 600; letter-spacing: 2px; color: rgba(255,255,255,0.8); margin: 0 0 16px 0;">
+                    🎯 ULTIMATE GOAL</p>
+                <p style="font-size: 20px; font-weight: 500; color: #fff; margin: 0; line-height: 1.6;">
+                    ボタンひとつで<br>
+                    最適シフトが提案される
+                </p>
+                <p style="font-size: 28px; font-weight: 600; color: #fff; margin: 20px 0 0 0; letter-spacing: 1px;">業務革命
+                </p>
+            </div>
         </div>
     </section>
 
