--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
         <h1>Momentum Peaks</h1>
         <p
             style="font-size: 14px; font-weight: 400; color: var(--text-secondary); letter-spacing: 2px; margin: -10px 0 20px 0;">
-            モメンタムピークス</p>
+            モメンタムピークス ― WHY MOMENTUM PEAKS</p>
         <p class="hero-sub">業界の「なんとなく」を排除し、<br>データで<strong>適正フォーキャスト</strong>を構築する。<br><span
                 style="font-size:14px; color:var(--gold);">Scale: 0.01 〜 5.00</span></p>
 
@@ -646,10 +646,14 @@
             </div>
 
             <div
-                style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 16px; padding: 40px; text-align: center;">
+                style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 16px; padding: 40px; text-align: center; position: relative;">
+                <!-- Connecting Line -->
+                <div
+                    style="position: absolute; top: -30px; left: 50%; width: 2px; height: 30px; background: linear-gradient(to bottom, var(--border), var(--gold));">
+                </div>
                 <div
                     style="font-size: 12px; font-weight: 600; letter-spacing: 3px; color: rgba(255,255,255,0.9); margin-bottom: 16px;">
-                    ⑦ FINAL OUTPUT</div>
+                    ⑧ FINAL OUTPUT</div>
                 <div
                     style="font-family: 'SF Mono', 'Menlo', monospace; font-size: 20px; font-weight: 600; color: #fff; margin-bottom: 12px;">
                     月別 Momentum Peaks = ( KF① + KF② + KF③ ) ÷ 3
@@ -992,7 +996,11 @@
         </div>
 
         <!-- Ultimate Goal -->
-        <div style="text-align: center; margin-top: 50px;">
+        <div style="text-align: center; margin-top: 50px; position: relative;">
+            <!-- Connecting Line -->
+            <div
+                style="position: absolute; top: -30px; left: 50%; width: 2px; height: 30px; background: linear-gradient(to bottom, var(--border), var(--gold));">
+            </div>
             <div
                 style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 20px; padding: 40px; max-width: 500px; margin: 0 auto; display: inline-block;">
                 <p
