🔧 Fix: ⑧ → ⑦ FINAL OUTPUT

--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
                 </div>
                 <div
                     style="font-size: 12px; font-weight: 600; letter-spacing: 3px; color: rgba(255,255,255,0.9); margin-bottom: 16px;">
-                    ⑧ FINAL OUTPUT</div>
+                    ⑦ FINAL OUTPUT</div>
                 <div
                     style="font-family: 'SF Mono', 'Menlo', monospace; font-size: 20px; font-weight: 600; color: #fff; margin-bottom: 12px;">
                     月別 Momentum Peaks = ( KF① + KF② + KF③ ) ÷ 3
