✨ Add decorative top lines inside FINAL OUTPUT and ULTIMATE GOAL boxes

--- a/index.html
+++ b/index.html
@@ -646,14 +646,14 @@
             </div>
 
             <div
-                style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 16px; padding: 40px; text-align: center; position: relative;">
-                <!-- Connecting Line -->
+                style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 16px; padding: 40px; text-align: center; margin-top: 30px;">
+                <!-- Top decorative line -->
                 <div
-                    style="position: absolute; top: -30px; left: 50%; width: 2px; height: 30px; background: linear-gradient(to bottom, var(--border), var(--gold));">
+                    style="width: 60px; height: 3px; background: rgba(255,255,255,0.5); margin: 0 auto 20px; border-radius: 2px;">
                 </div>
                 <div
                     style="font-size: 12px; font-weight: 600; letter-spacing: 3px; color: rgba(255,255,255,0.9); margin-bottom: 16px;">
-                    ⑦ FINAL OUTPUT</div>
+                    ⑧ FINAL OUTPUT</div>
                 <div
                     style="font-family: 'SF Mono', 'Menlo', monospace; font-size: 20px; font-weight: 600; color: #fff; margin-bottom: 12px;">
                     月別 Momentum Peaks = ( KF① + KF② + KF③ ) ÷ 3
@@ -996,10 +996,16 @@
         </div>
 
         <!-- Ultimate Goal -->
-        <div style="text-align: center; margin-top: 50px; position: relative;">
-            <!-- Connecting Line -->
+        <div style="text-align: center; margin-top: 50px;">
             <div
-                style="position: absolute; top: -30px; left: 50%; width: 2px; height: 30px; background: linear-gradient(to bottom, var(--border), var(--gold));">
+                style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 20px; padding: 40px; max-width: 500px; margin: 0 auto; display: inline-block;">
+                <!-- Top decorative line -->
+                <div
+                    style="width: 60px; height: 3px; background: rgba(255,255,255,0.5); margin: 0 auto 20px; border-radius: 2px;">
+                </div>
+                <p
+                    style="font-size: 11px; font-weight: 600; letter-spacing: 2px; color: rgba(255,255,255,0.8); margin: 0 0 16px 0;">
+                    🎯 ULTIMATE GOAL</p>
             </div>
             <div
                 style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 20px; padding: 40px; max-width: 500px; margin: 0 auto; display: inline-block;">
