📝 WHY MOMENTUM PEAKS on separate line

--- a/index.html
+++ b/index.html
@@ -565,8 +565,10 @@
         <p class="hero-eyebrow">SVD-OS Intelligence</p>
         <h1>Momentum Peaks</h1>
         <p
-            style="font-size: 14px; font-weight: 400; color: var(--text-secondary); letter-spacing: 2px; margin: -10px 0 20px 0;">
-            モメンタムピークス ― WHY MOMENTUM PEAKS</p>
+            style="font-size: 14px; font-weight: 400; color: var(--text-secondary); letter-spacing: 2px; margin: -10px 0 10px 0;">
+            モメンタムピークス</p>
+        <p style="font-size: 12px; font-weight: 500; color: var(--gold); letter-spacing: 3px; margin: 0 0 20px 0;">WHY
+            MOMENTUM PEAKS</p>
         <p class="hero-sub">業界の「なんとなく」を排除し、<br>データで<strong>適正フォーキャスト</strong>を構築する。<br><span
                 style="font-size:14px; color:var(--gold);">Scale: 0.01 〜 5.00</span></p>
 
