--- a/index.html
+++ b/index.html
@@ -649,13 +649,13 @@
 
             <div
                 style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 16px; padding: 40px; text-align: center; margin-top: 30px;">
-                <!-- Top decorative line -->
-                <div
-                    style="width: 60px; height: 3px; background: rgba(255,255,255,0.5); margin: 0 auto 20px; border-radius: 2px;">
-                </div>
                 <div
                     style="font-size: 12px; font-weight: 600; letter-spacing: 3px; color: rgba(255,255,255,0.9); margin-bottom: 16px;">
-                    ⑦ FINAL OUTPUT</div>
+                    ⑧ FINAL OUTPUT</div>
+                <!-- Decorative Line -->
+                <div
+                    style="width: 80px; height: 2px; background: rgba(255,255,255,0.4); margin: 0 auto 20px; border-radius: 1px;">
+                </div>
                 <div
                     style="font-family: 'SF Mono', 'Menlo', monospace; font-size: 20px; font-weight: 600; color: #fff; margin-bottom: 12px;">
                     月別 Momentum Peaks = ( KF① + KF② + KF③ ) ÷ 3
@@ -1001,13 +1001,13 @@
         <div style="text-align: center; margin-top: 50px;">
             <div
                 style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 20px; padding: 40px; max-width: 500px; margin: 0 auto; display: inline-block;">
-                <!-- Top decorative line -->
-                <div
-                    style="width: 60px; height: 3px; background: rgba(255,255,255,0.5); margin: 0 auto 20px; border-radius: 2px;">
-                </div>
                 <p
                     style="font-size: 11px; font-weight: 600; letter-spacing: 2px; color: rgba(255,255,255,0.8); margin: 0 0 16px 0;">
                     🎯 ULTIMATE GOAL</p>
+                <!-- Decorative Line -->
+                <div
+                    style="width: 80px; height: 2px; background: rgba(255,255,255,0.4); margin: 0 auto 20px; border-radius: 1px;">
+                </div>
                 <p style="font-size: 20px; font-weight: 500; color: #fff; margin: 0; line-height: 1.6;">
                     ボタンひとつで<br>
                     最適シフトが提案される
@@ -1015,6 +1015,9 @@
                 <p style="font-size: 28px; font-weight: 600; color: #fff; margin: 20px 0 0 0; letter-spacing: 1px;">業務革命
                 </p>
             </div>
+        </div>
+        </p>
+        </div>
         </div>
     </section>
 
