--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                 style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 16px; padding: 40px; text-align: center; margin-top: 30px;">
                 <div
                     style="font-size: 12px; font-weight: 600; letter-spacing: 3px; color: rgba(255,255,255,0.9); margin-bottom: 16px;">
-                    ⑧ FINAL OUTPUT</div>
+                    ⑦ FINAL OUTPUT</div>
                 <!-- Decorative Line -->
                 <div
                     style="width: 80px; height: 2px; background: rgba(255,255,255,0.4); margin: 0 auto 20px; border-radius: 1px;">
