--- a/index.html
+++ b/index.html
@@ -997,27 +997,23 @@
             </div>
         </div>
 
-        <!-- Ultimate Goal -->
-        <div style="text-align: center; margin-top: 50px;">
-            <div
-                style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 20px; padding: 40px; max-width: 500px; margin: 0 auto; display: inline-block;">
-                <p
-                    style="font-size: 11px; font-weight: 600; letter-spacing: 2px; color: rgba(255,255,255,0.8); margin: 0 0 16px 0;">
-                    🎯 ULTIMATE GOAL</p>
-                <!-- Decorative Line -->
-                <div
-                    style="width: 80px; height: 2px; background: rgba(255,255,255,0.4); margin: 0 auto 20px; border-radius: 1px;">
+        <!-- Ultimate Goal - OUTPUTと同じ構造 -->
+        <div style="max-width: 700px; margin: 50px auto 0;">
+            <div class="vision-card"
+                style="background: linear-gradient(135deg, var(--gold) 0%, #d4a84b 100%); border-radius: 16px; padding: 24px 30px;">
+                <div style="text-align: center; margin-bottom: 16px;">
+                    <div
+                        style="font-size: 10px; font-weight: 600; letter-spacing: 2px; color: rgba(255,255,255,0.8); margin-bottom: 6px;">
+                        🎯 ULTIMATE GOAL</div>
+                    <div style="font-size: 18px; font-weight: 600; color: #fff;">業務革命</div>
                 </div>
-                <p style="font-size: 20px; font-weight: 500; color: #fff; margin: 0; line-height: 1.6;">
-                    ボタンひとつで<br>
-                    最適シフトが提案される
-                </p>
-                <p style="font-size: 28px; font-weight: 600; color: #fff; margin: 20px 0 0 0; letter-spacing: 1px;">業務革命
-                </p>
+                <div style="border-top: 1px solid rgba(255,255,255,0.3); padding-top: 16px;">
+                    <p
+                        style="font-size: 13px; color: rgba(255,255,255,0.9); margin: 0; line-height: 1.6; text-align: center;">
+                        <strong>ボタンひとつで最適シフトが提案される</strong><br>AI時代のシフト作成
+                    </p>
+                </div>
             </div>
-        </div>
-        </p>
-        </div>
         </div>
     </section>
 
